--- a/index.html
+++ b/index.html
@@ -111,7 +111,113 @@
           </section>
      </header>
      <!-- Biker zone Main Part -->
-      <main></main>
+      <main class="max-w-7xl mx-auto ">
+        <!-- Fetured Bikes In This Year -->
+         <div class="my-12 p-4">
+            <div>
+                <h1 class="text-center text-2xl font-bold lg:text-4xl">Fetured Bikes In This Year</h1>
+             </div>
+             <div class="grid grid-cols-1 gap-4 lg:grid-cols-3 my-5 ">
+                <div>
+                    <img src="images/others/latest1.png" class="mx-auto" alt="">
+                </div>
+                <div>
+                    <img src="images/others/latest2.png" class="mx-auto" alt="">
+                </div>
+                <div>
+                    <img src="images/others/latest3.png" class="mx-auto" alt="">
+                </div>
+             </div>
+         </div>
+         <!-- latest News -->
+          <section class="my-12 p-4">
+             <div class="text-center text-2xl font-bold lg:text-4xl ">
+                <h1>latest News</h1>
+             </div>
+             <div class="my-5 grid grid-cols-1 gap-5 p-4 lg:grid-cols-3 ">
+                <div class="p-8 rounded-md border shadow-md flex flex-col gap-y-4 ">
+                    <img src="images/others/latest1.png" class="mx-auto" alt="">
+                    <h1 class="text-xl md:text-2xl md:font-bold">Ducati XDIAVEL S-73</h1>
+                    <p class="text-[#6C6C6C]">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                    <button class="md:w-1/2 p-1 text-[#E76F51] hover:bg-[#E76F51] hover:text-white duration-300 rounded-sm font-medium border-[#E76F51] border">Read More</button>
+                 </div>
+
+                <div class="p-8 rounded-md border shadow-md flex flex-col gap-y-4 ">
+                    <img src="images/others/latest2.png" class="mx-auto" alt="">
+                    <h1 class="text-xl md:text-2xl md:font-bold">Motorcycles & Scooters</h1>
+                    <p class="text-[#6C6C6C]">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                    <button class="md:w-1/2 p-1 text-[#E76F51] hover:bg-[#E76F51] hover:text-white duration-300 rounded-sm font-medium border-[#E76F51] border">Read More</button>
+                 </div>
+                 <div class="p-8 rounded-md border shadow-md flex flex-col gap-y-4 ">
+                    <img src="images/others/latest3.png" class="mx-auto" alt="">
+                    <h1 class="text-xl md:text-2xl md:font-bold">2021 Honda CBR500R</h1>
+                    <p class="text-[#6C6C6C]">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                    <button class="md:w-1/2 p-1 shadow-sm text-[#E76F51] hover:bg-[#E76F51] hover:text-white duration-300 rounded-sm font-medium border-[#E76F51] border">Read More</button>
+                 </div>
+             </div>
+          </section>
+          <!-- Happy Clients says -->
+           <section>
+               <h1 class="text-center text-xl md:text-4xl my-4 font-medium md:font-bold">Happy <span class="text-[#E76F51]">Clients says</span></h1>
+               <!-- client card  -->
+                <div class="grid grid-cols-1 py-8 px-4 lg:grid-cols-3 gap-4 ">
+                  <div class="border  rounded-md shadow-lg flex flex-col gap-y-3 p-4 py-8 text-center">
+                     <img src="images/others/user-1.png" class="mx-auto w-1/3" alt="">
+                     <p class="text-[#6C6C6C] px-2">Slate helps you see how 
+                        many more days you need 
+                        to work to reach your financial 
+                        goal for the month and year.</p>
+                       <div class="flex justify-center items-center">
+                        <div class="flex w-1/3   ">
+                           <img src="images/icons/star-solid.svg" class="w-[20px] mx-auto" alt="">
+                           <img src="images/icons/star-solid.svg" class="w-[20px] mx-auto"  alt="">
+                           <img src="images/icons/star-solid.svg" class="w-[20px] mx-auto"  alt="">
+                           <img src="images/icons/star-solid.svg" class="w-[20px] mx-auto"   alt="">
+                           <img src="images/icons/star-regular.svg" class="w-[20px] mx-auto"  alt="">
+                        </div>
+                       </div>
+                       <p class="text-[#23A6F0] font-bold">Regina Miles</p>
+                       <p class="font-semibold">Banker</p>
+                  </div>
+                  <div class="border   rounded-md shadow-lg flex flex-col gap-y-3 p-4 py-8 text-center">
+                     <img src="images/others/user-2.png" class="mx-auto w-1/3" alt="">
+                     <p class="text-[#6C6C6C] px-2">Slate helps you see how 
+                        many more days you need 
+                        to work to reach your financial 
+                        goal for the month and year.</p>
+                       <div class="flex justify-center items-center">
+                        <div class="flex w-1/3   ">
+                           <img src="images/icons/star-solid.svg" class="w-[20px] mx-auto" alt="">
+                           <img src="images/icons/star-solid.svg" class="w-[20px] mx-auto"  alt="">
+                           <img src="images/icons/star-solid.svg" class="w-[20px] mx-auto"  alt="">
+                           <img src="images/icons/star-solid.svg" class="w-[20px] mx-auto"   alt="">
+                           <img src="images/icons/star-regular.svg" class="w-[20px] mx-auto"  alt="">
+                        </div>
+                       </div>
+                       <p class="text-[#23A6F0] font-bold">Regina Miles</p>
+                       <p class="font-semibold">Banker</p>
+                  </div>
+                  <div class="border   rounded-md shadow-lg flex flex-col gap-y-3 p-4 py-8 text-center">
+                     <img src="images/others/user-3.png" class="mx-auto w-1/3" alt="">
+                     <p class="text-[#6C6C6C] px-2">Slate helps you see how 
+                        many more days you need 
+                        to work to reach your financial 
+                        goal for the month and year.</p>
+                       <div class="flex justify-center items-center">
+                        <div class="flex w-1/3   ">
+                           <img src="images/icons/star-solid.svg" class="w-[20px] mx-auto" alt="">
+                           <img src="images/icons/star-solid.svg" class="w-[20px] mx-auto"  alt="">
+                           <img src="images/icons/star-solid.svg" class="w-[20px] mx-auto"  alt="">
+                           <img src="images/icons/star-solid.svg" class="w-[20px] mx-auto"   alt="">
+                           <img src="images/icons/star-regular.svg" class="w-[20px] mx-auto"  alt="">
+                        </div>
+                       </div>
+                       <p class="text-[#23A6F0] font-bold">Regina Miles</p>
+                       <p class="font-semibold">Banker</p>
+                  </div>
+                </div>
+           </section>
+      </main>
       <!-- biker zone footer part -->
        <footer></footer>
 </body>
