--- a/index.html
+++ b/index.html
@@ -217,6 +217,48 @@
                   </div>
                 </div>
            </section>
+           <!-- Frequently Asked Questions -->
+            <section>
+                <h1 class="text-2xl md:text-4xl font-bold  my-4 text-center">Frequently Asked <span class="text-[#E76F51]">Questions</span></h1>
+                <div class="grid grid-cols-1 gap-5 items-center lg:grid-cols-2 my-5">
+                    <div class="p-8">
+                     <img src="images/others/faq.png" class="mx-auto" alt="">
+                    </div>
+
+                    <div class="space-y-4 p-8">
+                      <div class="collapse collapse-arrow shadow-md border rounded-none ">
+                        <input type="radio" name="my-accordion-2" checked="checked" />
+                        <div class="collapse-title text-xl font-medium">What are the most important things I should
+                           know about riding a bike?</div>
+                        <div class="collapse-content">
+                          <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-arrow shadow-md border rounded-none ">
+                        <input type="radio" name="my-accordion-2" />
+                        <div class="collapse-title text-xl font-medium">How can I tell if my helmet is old and I need a 
+                           new one?</div>
+                        <div class="collapse-content">
+                          <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-arrow  shadow-md border rounded-none">
+                        <input type="radio" name="my-accordion-2" />
+                        <div class="collapse-title text-xl font-medium">My bike has been in storage is it safe to ride?</div>
+                        <div class="collapse-content">
+                          <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-arrow  shadow-md border rounded-none">
+                        <input type="radio" name="my-accordion-2" />
+                        <div class="collapse-title text-xl font-medium">What rules should I follow when riding my bike?</div>
+                        <div class="collapse-content">
+                          <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+            </section>
       </main>
       <!-- biker zone footer part -->
        <footer></footer>
