--- a/index.html
+++ b/index.html
@@ -261,6 +261,27 @@
             </section>
       </main>
       <!-- biker zone footer part -->
-       <footer></footer>
+       <footer class="bg-[#0B0D17] p-8 text-white grid grid-cols-1 lg:grid-cols-2 justify-between gap-5 items-center">
+            <div class="flex flex-col gap-y-4">
+               <div class="flex gap-x-4">
+                  <h1 class="font-bold">Download Now</h1>
+                  <p>License</p>
+               </div>
+               <ul class=" flex gap-x-2 md:gap-x-4  ">
+                  <li>About</li>
+                  <li>Features</li>
+                  <li>Pricing</li>
+                  <li>Careers</li>
+                  <li>Help</li>
+                  <li>Privacy Policy</li>
+               </ul>
+               <p class="text-sm">© 2020 bike. All rights reserved</p>
+            </div>
+            <div class="flex flex-col gap-y-5">
+               <p class="md:text-center">Get the App</p>
+               <img src="images/others/android.png" class="md:w-1/2 w-1/3 md:mx-auto" alt="">
+               <img src="images/others/ios.png" class="md:w-1/2 w-1/3  md:mx-auto" alt="">
+            </div>
+       </footer>
 </body>
 </html>
